[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/inventory.png" type="Texture" id=1]
[ext_resource path="res://misc/draggeditemhos.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.7643, 7.98148 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.86887, 4.86333 )

[node name="draggeditemhos" type="KinematicBody2D"]
modulate = Color( 0.0901961, 0.682353, 0.839216, 1 )
input_pickable = true
collision_layer = 2147549184
collision_mask = 65536
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.222717 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.445471, 0.44546 )
scale = Vector2( 0.0986612, 0.0986611 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 65536

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
